# graphicEditorOpenGL

./: .gitignore  CMakeLists.txt  MyGLWidget.h  README.md  main.cpp  structs.h
shaders/: shadersSource.h
